# boxaroo

./: .gitignore  .instructions.md  .pre-commit-config.yaml  BDD_TEST_PLAN.md  Log-2026-05-16.txt  Log-2026-05-17 - 2.txt  Log-2026-05-17 - 3.txt  Log-2026-05-17 - 4.txt  Log-2026-05-17.txt  README.md  __main__.py  architect.agent.md  boxaroo-bdd.agent.md  cli.py  copilot-instructions.md  data_storage.py  file_handler.py  isupermarket.py  logger.py  product_parser.py  pyproject.toml  requirements.txt  tox.ini  web_driver.py  woolworths.py
Agent/: BDD_TEST_PLAN.md  TESTING.md
BoxarooApp/: README.md  package-lock.json  package.json
Code/: category_list_service.py  cli.py  coles.py  coles_category_data_normaliser.py  coles_category_source.py  contracts.py  file_handler.py  isupermarket.py  list_size_help.py  logger.py  main.py  product_parser.py  scrape_coordinator.py  supermarket_factory.py  web_driver.py  woolworths.py  woolworths_category_data_normaliser.py  woolworths_category_source.py
Config/: performance.example.json  performance.json
Deploy/: boxaroo-long-categories.example.service  boxaroo-long-categories.example.timer  boxaroo-long-categories.service  boxaroo.example.service  boxaroo.example.timer
Scripts/: run_long_categories.sh  run_tests.sh
Tests/: test_category_list_service.py  test_cli.py  test_coles.py  test_coles_category_data_normaliser.py  test_coles_category_source.py  test_file_handler.py  test_helpers.py  test_list_size_help.py  test_logger.py  test_main.py  test_product_parser.py  test_scrape_coordinator.py  test_supermarket_factory.py  (+5 more)
(+48 files in other folders)
